<?xml version="1.0"?>
<package>
  <name>navio2</name>
  <version>0.0.0</version>
  <description>The Navio2 package</description>

  <maintainer email="prasanthkotaru@gmail.com">Prasanth Kotaru</maintainer>


  <license>TODO</license>

  <!-- Collection of drivers and examples for Navio 2 - autopilot shield for Raspberry Pi. -->
  <url type="website">https://github.com/emlid/Navio2</url>


  <author email="prasanthkotaru@gmail.com">Prasanth Kotaru</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>sensor_msgs</build_depend>

  <export>
  </export>
</package>
